rs/tests/failures/stable/trait_std_from_orphan.stderr
error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> tests/failures/stable/trait_std_from_orphan.rs:15:1
   |
15 | impl From<String> for Vec<i32> {
   | ^^^^^------------^^^^^--------
   |      |                |
   |      |                `Vec` is not defined in the current crate
   |      `String` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead
